--- a/src/components/Examples/DisplayPage.scss
+++ b/src/components/Examples/DisplayPage.scss
@@ -1,6 +1,33 @@
+@import "../../tokens/ColorTokens.scss";
+
 .displayPage {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: max-content;
+  margin-top: 20px;
+}
+.example {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  border: 5px solid $dark;
+  margin-bottom: 20px;
+  width: 100%;
+  font-size: 16px;
+  .airy-button {
+    margin: 0 20px;
+  }
+  .progress-bar {
+    margin: 10px 0;
+  }
+}
+
+.button-wrapper {
+  display: flex;
+}
+
+h3 {
+  margin-top: 0;
 }
