--- a/src/components/Progress.scss
+++ b/src/components/Progress.scss
@@ -2,7 +2,7 @@
 
 $progress-border-width: 0.25em;
 $progress-border: $progress-border-width solid $dark;
-
+$blinking-animation: blinking-animation 500ms linear infinite both;
 .progress-bar {
   display: flex;
   width: 100%;
@@ -16,22 +16,90 @@ $progress-border: $progress-border-width solid $dark;
     display: flex;
     border: none;
     margin: 4px;
+    transition: width 250ms cubic-bezier(0.1, 0.92, 0.64, 0.66);
+    border-radius: 4px;
+    border-left: 1px solid $dark;
+    border-top: 1px solid $dark;
+    border-right: 4px solid $dark;
+    border-bottom: 4px solid $dark;
     &.primary {
       background: $primary;
+      border-color: $primary-dark;
     }
     &.secondary {
       background: $white;
+      border-color: $grey;
     }
     &.success {
       background: $success;
+      border-color: $success-dark;
     }
     &.warning {
       background: $warning;
+      border-color: $warning-dark;
     }
     &.error {
       background: $error;
+      border-color: $error-dark;
     }
   }
+  .tick-bar-inner {
+    margin: 4px;
+    display: flex;
+    width: 100%;
+    .progress-tick {
+      display: flex;
+      opacity: 0.1;
+      flex-grow: 1;
+      margin: 2px;
+      border-radius: 4px;
+      border-left: 2px solid $dark;
+      border-top: 2px solid $dark;
+      border-right: 4px solid $dark;
+      border-bottom: 4px solid $dark;
+      &.primary {
+        background: $primary;
+        border-color: $primary-dark;
+        opacity: 1;
+        &.currentTick {
+          animation: $blinking-animation;
+        }
+      }
+      &.secondary {
+        background: $white;
+        border-color: $grey;
+        opacity: 1;
+        &.currentTick {
+          animation: $blinking-animation;
+        }
+      }
+      &.success {
+        background: $success;
+        border-color: $success-dark;
+        opacity: 1;
+        &.currentTick {
+          animation: $blinking-animation;
+        }
+      }
+      &.warning {
+        background: $warning;
+        border-color: $warning-dark;
+        opacity: 1;
+        &.currentTick {
+          animation: $blinking-animation;
+        }
+      }
+      &.error {
+        background: $error;
+        border-color: $error-dark;
+        opacity: 1;
+        &.currentTick {
+          animation: $blinking-animation;
+        }
+      }
+    }
+  }
+
   &:before {
     content: "";
     top: 0;
@@ -49,5 +117,17 @@ $progress-border: $progress-border-width solid $dark;
     position: absolute;
     width: $progress-border-width;
     background: $dark;
+  }
+}
+
+@keyframes blinking-animation {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
   }
 }
